--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -22,6 +22,11 @@ paths:
             title: limit
             default: 25
             type: number
+        - name: nickname
+          required: false
+          in: query
+          schema:
+            type: string
       responses:
         '200':
           description: ''
