--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.13.0",
+    "@types/cache-manager": "^3.4.3",
+    "cache-manager": "^4.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.2",
