--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "dotenv -e .env.development -- yarn prisma generate && nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "migrate": "dotenv -e .env.development -- yarn prisma migrate dev --name postgres-init",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "generate:prisma": "npx prisma migrate dev --name init",
     "generate:docs": "npx redoc-cli build docs/index.json -o docs/index.html",
@@ -35,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.2",
+    "mathjs": "^10.6.1",
     "matrix-transpose": "^1.0.2",
     "node-fetch": "^3.2.5",
     "prisma": "^3.14.0",
