--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 paths:
   /v1/users:
     get:
-      operationId: 一覧取得
+      operationId: 一覧検索
       summary: ''
       parameters:
         - name: offset
@@ -35,7 +35,7 @@ paths:
         - ユーザー
   /v1/users/{nsaid}:
     get:
-      operationId: 取得
+      operationId: 検索
       summary: ''
       parameters:
         - name: nsaid
@@ -47,6 +47,10 @@ paths:
       responses:
         '200':
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserStats'
         '404':
           description: ''
       tags:
@@ -56,13 +60,6 @@ paths:
       operationId: 統計取得
       summary: ''
       parameters:
-        - name: nsaid
-          required: true
-          in: query
-          description: プレイヤーID
-          example: 91d160aa84e88da6
-          schema:
-            type: string
         - name: start_time
           required: true
           in: path
@@ -70,19 +67,7 @@ paths:
           example: 1655575200
           schema:
             type: number
-        - name: is_clear
-          required: false
-          in: query
-          description: クリアしたかどうか
-          schema:
-            type: boolean
       responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StatsResultsDto'
         '404':
           description: ''
       tags:
@@ -115,31 +100,76 @@ paths:
           description: ''
       tags:
         - ユーザー
-  /v1/waves:
+  /v1/waves/{start_time}:
     get:
       operationId: WAVE記録取得
       summary: ''
       parameters:
         - name: start_time
           required: true
-          in: query
+          in: path
+          example: 1655575200
           schema:
-            type: number
+            type: integer
         - name: event_type
           required: true
           in: query
+          example: 0
           schema:
-            type: number
+            type: integer
         - name: water_level
           required: true
           in: query
+          example: 1
           schema:
-            type: number
+            type: integer
       responses:
         '200':
           description: ''
       tags:
-        - WAVE記録
+        - シフト記録
+  /v1/versions:
+    get:
+      operationId: バージョン取得
+      summary: ''
+      parameters: []
+      responses:
+        '200':
+          description: ''
+      tags:
+        - バージョン
+  /v1/weapons/{start_time}:
+    get:
+      operationId: 支給ブキ数記録取得
+      summary: ''
+      parameters:
+        - name: start_time
+          required: true
+          in: path
+          example: 1656201600
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: ''
+      tags:
+        - シフト記録
+  /v1/salmonids/{start_time}:
+    get:
+      operationId: オオモノ数記録取得
+      summary: ''
+      parameters:
+        - name: start_time
+          required: true
+          in: path
+          example: 1656201600
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: ''
+      tags:
+        - シフト記録
   /v1/results/{salmon_id}:
     get:
       operationId: 取得
@@ -418,121 +448,210 @@ paths:
           description: ''
       tags:
         - スケジュール
+  /v1/totals/{start_time}:
+    get:
+      operationId: 総合記録取得
+      summary: ''
+      parameters:
+        - name: start_time
+          required: true
+          in: path
+          example: 1655575200
+          schema:
+            type: integer
+        - name: nightless
+          required: true
+          in: query
+          example: false
+          schema:
+            type: boolean
+      responses:
+        '200':
+          description: ''
+      tags:
+        - シフト記録
 info:
   title: Salmon Stats API Documents
   description: ''
+  version: 1.0.5.3
   contact: {}
 tags: []
 servers: []
 components:
   schemas:
-    IkuraStat:
+    Result:
       type: object
       properties:
+        salmon_id:
+          type: number
+          description: リザルトID
+        boss_counts:
+          example:
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+          description: オオモノ出現数
+          type: array
+          items:
+            type: number
+        boss_kill_counts:
+          example:
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+            - 0
+          description: オオモノ討伐数
+          type: array
+          items:
+            type: number
         golden_ikura_num:
           type: number
           description: 金イクラ数
         ikura_num:
           type: number
           description: 赤イクラ数
+        no_night_waves:
+          type: boolean
+          description: 夜WAVEを含むかどうか
+        danger_rate:
+          type: number
+          description: キケン度
+        end_time:
+          format: date-time
+          type: string
+          description: シフト終了時刻
+        play_time:
+          format: date-time
+          type: string
+          description: プレイ時刻
+        start_time:
+          format: date-time
+          type: string
+          description: シフト開始時刻
+        members:
+          example:
+            - '0000000000000000'
+            - '1111111111111111'
+            - '2222222222222222'
+            - '3333333333333333'
+          description: チームメンバー(ソート済み)
+          type: array
+          items:
+            type: string
+        job_result:
+          description: バイト結果
+          allOf:
+            - $ref: '#/components/schemas/JobResult'
+        players:
+          description: プレイヤーリザルト
+          type: array
+          items:
+            $ref: '#/components/schemas/Player'
+        waves:
+          description: WAVEリザルト
+          type: array
+          items:
+            $ref: '#/components/schemas/Wave'
+        schedule:
+          description: スケジュール
+          allOf:
+            - $ref: '#/components/schemas/Schedule'
+      required:
+        - salmon_id
+        - boss_counts
+        - boss_kill_counts
+        - golden_ikura_num
+        - ikura_num
+        - no_night_waves
+        - danger_rate
+        - end_time
+        - play_time
+        - start_time
+        - members
+        - job_result
+        - players
+        - waves
+        - schedule
+    StageResult:
+      type: object
+      properties:
+        stage_id:
+          type: number
+        grade_point_max:
+          type: number
+        shifts_worked:
+          type: number
+        kuma_point_total:
+          type: number
+        player_results:
+          $ref: '#/components/schemas/Result'
+        team_results:
+          $ref: '#/components/schemas/Result'
+      required:
+        - stage_id
+        - grade_point_max
+        - shifts_worked
+        - kuma_point_total
+        - player_results
+        - team_results
+    UserStats:
+      type: object
+      properties:
+        nsaid:
+          type: string
+        nickname:
+          type: string
+        thumbnail_url:
+          type: string
+        shifts_worked:
+          type: number
+        golden_ikura_num:
+          type: number
+        ikura_num:
+          type: number
         dead_count:
           type: number
-          description: 被救助数
+        kuma_point:
+          type: number
         help_count:
           type: number
-          description: 救助数
+        grade_id:
+          type: number
+        grade_point:
+          type: number
+        stage_results:
+          type: array
+          items:
+            $ref: '#/components/schemas/StageResult'
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Result'
       required:
+        - nsaid
+        - nickname
+        - thumbnail_url
+        - shifts_worked
         - golden_ikura_num
         - ikura_num
         - dead_count
+        - kuma_point
         - help_count
-    IkuraStats:
-      type: object
-      properties:
-        max:
-          description: 最大値
-          allOf:
-            - $ref: '#/components/schemas/IkuraStat'
-        min:
-          description: 最小値
-          allOf:
-            - $ref: '#/components/schemas/IkuraStat'
-        avg:
-          description: 平均値
-          allOf:
-            - $ref: '#/components/schemas/IkuraStat'
-        count:
-          type: number
-          description: 回数
-      required:
-        - max
-        - min
-        - avg
-        - count
-    TotalResultDto:
-      type: object
-      properties:
-        global:
-          description: 全体
-          type: array
-          items:
-            $ref: '#/components/schemas/IkuraStats'
-        player:
-          description: 指定プレイヤーを含む
-          type: array
-          items:
-            $ref: '#/components/schemas/IkuraStats'
-      required:
-        - global
-        - player
-    SingleResultDto:
-      type: object
-      properties:
-        global:
-          description: プレイヤー全体
-          allOf:
-            - $ref: '#/components/schemas/IkuraStats'
-        team:
-          description: 指定プレイヤーとマッチングしたプレイヤー全体
-          allOf:
-            - $ref: '#/components/schemas/IkuraStats'
-        player:
-          description: 指定プレイヤー
-          allOf:
-            - $ref: '#/components/schemas/IkuraStats'
-        crew:
-          description: 指定プレイヤーとマッチングした仲間
-          allOf:
-            - $ref: '#/components/schemas/IkuraStats'
-      required:
-        - global
-    LegacyStatsDto:
-      type: object
-      properties: {}
-    StatsResultsDto:
-      type: object
-      properties:
-        waves:
-          description: WAVE記録(チーム単位)
-          allOf:
-            - $ref: '#/components/schemas/TotalResultDto'
-        total:
-          description: 総合記録(チーム単位)
-          allOf:
-            - $ref: '#/components/schemas/TotalResultDto'
-        single:
-          description: 個人記録(プレイヤー単位)
-          allOf:
-            - $ref: '#/components/schemas/SingleResultDto'
-        stats:
-          description: 総合統計(旧Stats統計)
-          allOf:
-            - $ref: '#/components/schemas/LegacyStatsDto'
-      required:
-        - waves
-        - total
-        - single
-        - stats
+        - grade_id
+        - grade_point
+        - stage_results
+        - results
     NicknameAndIcon:
       type: object
       properties:
@@ -738,110 +857,6 @@ components:
         - end_time
         - rare_weapon
         - weapon_list
-    Result:
-      type: object
-      properties:
-        salmon_id:
-          type: number
-          description: リザルトID
-        boss_counts:
-          example:
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-          description: オオモノ出現数
-          type: array
-          items:
-            type: number
-        boss_kill_counts:
-          example:
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-            - 0
-          description: オオモノ討伐数
-          type: array
-          items:
-            type: number
-        golden_ikura_num:
-          type: number
-          description: 金イクラ数
-        ikura_num:
-          type: number
-          description: 赤イクラ数
-        no_night_waves:
-          type: boolean
-          description: 夜WAVEを含むかどうか
-        danger_rate:
-          type: number
-          description: キケン度
-        end_time:
-          format: date-time
-          type: string
-          description: シフト終了時刻
-        play_time:
-          format: date-time
-          type: string
-          description: プレイ時刻
-        start_time:
-          format: date-time
-          type: string
-          description: シフト開始時刻
-        members:
-          example:
-            - '0000000000000000'
-            - '1111111111111111'
-            - '2222222222222222'
-            - '3333333333333333'
-          description: チームメンバー(ソート済み)
-          type: array
-          items:
-            type: string
-        job_result:
-          description: バイト結果
-          allOf:
-            - $ref: '#/components/schemas/JobResult'
-        players:
-          description: プレイヤーリザルト
-          type: array
-          items:
-            $ref: '#/components/schemas/Player'
-        waves:
-          description: WAVEリザルト
-          type: array
-          items:
-            $ref: '#/components/schemas/Wave'
-        schedule:
-          description: スケジュール
-          allOf:
-            - $ref: '#/components/schemas/Schedule'
-      required:
-        - salmon_id
-        - boss_counts
-        - boss_kill_counts
-        - golden_ikura_num
-        - ikura_num
-        - no_night_waves
-        - danger_rate
-        - end_time
-        - play_time
-        - start_time
-        - members
-        - job_result
-        - players
-        - waves
-        - schedule
     Results:
       type: object
       properties:
