--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.2",
+    "form-data": "^4.0.0",
     "mathjs": "^10.6.4",
     "matrix-transpose": "^1.0.2",
     "node-fetch": "^3.2.5",
