--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,6 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.ts]
+[**/*.{ts, json}]
 indent_size = 2
 quote_type = single
