--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "dotenv -e .env.development -- yarn prisma generate && nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "migrate": "dotenv -e .env.development -- yarn prisma migrate dev --name postgres-init",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "generate:prisma": "npx prisma migrate dev --name init",
-    "generate:docs": "npx redoc-cli build docs/index.json -o docs/index.html",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -59,7 +54,8 @@
     "@typescript-eslint/parser": "^5.30.4",
     "dotenv-cli": "^5.1.0",
     "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.2",
     "prettier": "^2.3.2",
