- Update Results Method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,9 @@
   "files.associations": {
     "*.css": "postcss"
   },
-  "editor.formatOnSave": false
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma"
+  },
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
 }
