--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "dotenv -e .env.development -- yarn prisma generate && nest start --watch",
+    "start:dev": "dotenv -e .env.development -- nest start --watch",
+    "migrate": "dotenv -e .env.development -- yarn prisma migrate dev --name init",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:watch": "jest --watch",
