--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "migrate:dev": "dotenv -e .env.development -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
+    "migrate:prod": "dotenv -e .env -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
     "start:dev": "dotenv -e .env.development -- nest start --watch",
-    "migrate": "dotenv -e .env.development -- yarn prisma migrate dev --name init",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:watch": "jest --watch",
