- Add Sandbox environment

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "dotenv -e .env.development -- nest start --watch",
+    "start:local": "dotenv -e .env.sandbox -- nest start --watch",
     "start:prod": "node dist/main",
+    "migrate:local": "dotenv -e .env.sandbox -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
     "migrate:dev": "dotenv -e .env.development -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
     "migrate:prod": "dotenv -e .env -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
     "test": "jest",
