--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:prod": "node dist/main",
     "migrate:local": "dotenv -e .env.sandbox -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
     "migrate:dev": "dotenv -e .env.development -- yarn prisma migrate reset && yarn prisma migrate dev --name init",
+    "migrate:prod": "dotenv -e .env.sandbox -- yarn prisma migrate dev --name init",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
